Client/API Better error handling with server errors and displaying when a queued tweet is erroring. Style change if a tweet in the displayed queue was displayed or not. Bot: some fancy promising to ensure messages get sent in the right order, and a better way of handling erring messages in the middle, with a threshhold count so messages that error too much will go away

--- a/sparktweet-moderate/css/main.css
+++ b/sparktweet-moderate/css/main.css
@@ -22,6 +22,10 @@ body {
 	font-weight: bold;
 }
 
+.tweetMessage.displayed {
+	color: green;
+}
+
 .btn-primary{
 	margin-right: 10px;
 }
